# react-native-custom-keyboard

./: README.md  index.d.ts  index.js  package.json
harmony/: custom_keyboard.har
harmony/custom_keyboard/: BuildProfile.ets  oh-package-lock.json5  oh-package.json5  ts.ts
harmony/custom_keyboard/src/main/: module.json5
harmony/custom_keyboard/src/main/cpp/: CMakeLists.txt  CustomKeyboardPackage.cpp  CustomKeyboardPackage.h  CustomKeyboardTurboModuleSpec.cpp  CustomKeyboardTurboModuleSpec.h
harmony/custom_keyboard/src/main/ets/: Logger.ts  RNCustomKeyboardPackage.ts  RNCustomKeyboardTurboModule.ts
src/specs/v2/: NativeCustomKeyboard.ts
